09  August 2004 Andreas Fabri
Removed semicolons after closing parenthesis of functions, as they make problems for SunProCC

22 July 2004 Laurent Rineau
- patch a bug in Delaunay_mesh_2<Tr>: virtual_insert_in_the_edge was
  forcing the insertion of a point on a EDGE.

4 July 2004 Andreas Fabri
- In Delaunay_mesh_2: Removed const& on an object in a stack that gets popped before it gets used

1 July 2004 Laurent Rineau
- Added Extras in Delaunay_mesh_2<Tr, Extras> too.

28 June 2004 Laurent Rineau
- Move mark_facets functions from Delaunay_mesh_2 to
  Conforming_Delaunay_triangulation_2.
- Added a sort of hooks, through a template parameter "Extras", in
  Conforming_Delaunay_triangulation_2<Tr, Extras>. There is a default
  template argument that does nothing.
  These hooks help doing actions when points are inserted. Used in the
  package Mesh_3.

17 May 2004 Menelaos Karavelas
- replaced Point by Point_2 in the demo in order to resolve clash with
  the Mac version of Qt

6 May 2000 Laurent Rineau
- workaround for CC-5.xx, in include/CGAL/Delaunay_mesh_2.h

3 April 2004 Sylvain Pion
- Regenerate demo/example makefiles to remove debug options,
  which makes PGCC pass.

Version 1.0.2 (10 February 2004) [rursu]
- Updated headers in examples

version 1.0.1 (2003/12/07) [Laurent]
--------------------------
Submit the documentation too.

version 1.0.0 (2003/12/07) [Laurent]
--------------------------
o Bix Conforming_Delaunay_triangulation_2 where a typename was missing.
o bench/bench.C now compile again.
o I think this version can be named 1.0.0 now.

version 0.9.5 (2003/11/28) [Laurent]
--------------------------
o Fix the deprecated use of RIGHTTURN in conforming.

version 0.9.4 (2003/11/5) [Laurent]
--------------------------
o submitted to the testsuite

version 0.9.4 (2003/10/9) [af]
--------------------------
o Bug fix in Is_locally_conforming_Gabriel and in Is_locally_conforming_Delaunay
o Removed redundant tests

version 0.9.4
--------------------------